--- a/examples/website/index.html
+++ b/examples/website/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+        />
         <meta
             name="description"
             content="Easily merge three versions of a text document with this 3-way text merge tool."
