Fix scrolling on mobile

--- a/examples/website/index.html
+++ b/examples/website/index.html
@@ -25,8 +25,9 @@
   <body>
     <div class="background"></div>
 
-    <div class="page-wrapper">
-      <header>
+    <div class="scroll-container">
+      <div class="page-wrapper">
+        <header>
         <h1>3-Way Text Merge</h1>
         <p>
           The
@@ -136,6 +137,7 @@
           </svg>
         </a>
       </footer>
+      </div>
     </div>
 
     <noscript>JavaScript is required for this website.</noscript>
