Add cursors to example

--- a/examples/website/src/index.html
+++ b/examples/website/src/index.html
@@ -28,7 +28,7 @@
     <div class="scroll-container">
       <div class="page-wrapper">
         <header>
-          <h1>Reconcile: conflict-free 3-way text merging</h1>
+          <h1>Reconcile-text: conflict-free 3-way text merging</h1>
           <p>
             Think
             <a
@@ -96,9 +96,7 @@
                 <span class="radio-custom" aria-hidden="true"></span>
                 <div class="radio-content">
                   <span class="radio-label">Character</span>
-                  <span class="radio-description"
-                    >Fine-grained character-level merging</span
-                  >
+                  <span class="radio-description">Fine-grained merging</span>
                 </div>
               </label>
               <label class="radio-option">
@@ -121,7 +119,7 @@
                 <div class="radio-content">
                   <span class="radio-label">Line</span>
                   <span class="radio-description"
-                    >Line-by-line like <code>git merge</code></span
+                    >Line-by-line, like <code>git merge</code></span
                   >
                 </div>
               </label>
