Improve cursor hover effect

--- a/examples/website/src/index.html
+++ b/examples/website/src/index.html
@@ -28,7 +28,7 @@
     <div class="scroll-container">
       <div class="page-wrapper">
         <header>
-          <h1>Reconcile-text: conflict-free 3-way text merging</h1>
+          <h1><code>reconcile-text</code>: conflict-free 3-way text merging</h1>
           <p>
             Think
             <a
