Improve website's language

--- a/examples/website/src/index.html
+++ b/examples/website/src/index.html
@@ -79,8 +79,8 @@
               >documentation</a
             >
             or try editing the text boxes below to see <code>reconcile-text</code> in
-            action. Use the tokenisation options below to experiment with different
-            approaches — the Rust library also supports providing a custom tokeniser.
+            action. Use the tokenisation options to experiment with different approaches —
+            the Rust library also supports providing a custom tokeniser.
           </p>
         </header>
 
