--- a/examples/website/src/index.html
+++ b/examples/website/src/index.html
@@ -23,7 +23,12 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <title>reconcile-text: conflict-free 3-way text merging</title>
     <link inline inline-asset="index.css" inline-asset-delete />
-    <script defer data-domain="reconcile" data-api="https://stats.schmelczer.dev/status" src="https://stats.schmelczer.dev/js/script.outbound-links.js"></script>
+    <script
+      defer
+      data-domain="reconcile"
+      data-api="https://stats.schmelczer.dev/status"
+      src="https://stats.schmelczer.dev/js/script.outbound-links.js"
+    ></script>
   </head>
   <body>
     <div class="background"></div>
